--- a/week5/styles.css
+++ b/week5/styles.css
@@ -117,7 +117,7 @@ p .code {
 .header{
    width: 380px;
    height:200px;
-   background-image: url('../img/bg2.jpg');
+   background-image: "arch.jpg";
    background-size: 100% 200%;
    background-repeat: no-repeat;
    border-radius: 15px 15px 0 0;
@@ -226,6 +226,13 @@ p .code {
    border: none;
    font-size: 20px;
    padding-left:10px;
+}
+
+body > div > div.add-to-do > button {
+   background: none;
+   border: none;
+   color: blue;
+   height: fit-content;
 }
 
 /* screen parameters */
