--- a/final_project/style.css
+++ b/final_project/style.css
@@ -33,7 +33,60 @@
     height: auto;
 }
 
-.open > img{
-    width: 80%;
-    height: auto;
+.collapsed {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.information {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
+img{
+    position: relative;
+    right: 40%;
+    margin-left: 20px;
+    
+
+    
+}
+
+.collapsible {
+    background-color: whitesmoke;
+    color: black;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: center;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: rgb(172, 168, 168);
+  }
+  
+.content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+}
+
+.title {
+    font-size: x-large;
+    text-align: center;   
+
 }
