--- a/final_project/style.css
+++ b/final_project/style.css
@@ -1,12 +1,16 @@
-
-.main{
-    margin-left: 2%;
-    margin-right: 2%;
+.main {
+    margin: 1em;
 }
 
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.875em;
+}
+
+img{
+    max-width: 200px;
+    max-height: 100px;
+    height: auto;
 }
 
 .headText{
@@ -19,7 +23,6 @@ p {
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 100%;
     border: none;
     text-align: left;
     outline: none;
@@ -46,18 +49,12 @@ p {
     text-align: center;
     outline: none;
     font-size: 15px;
+    
 }
 
-.collapsible:after {
-    content: '\002B';
-    color: rgb(0, 185, 0);
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
-}
-  
 .active, .collapsible:hover {
     background-color: rgb(172, 168, 168);
+    
 }
 
 .active:after {
@@ -67,8 +64,7 @@ p {
 .content {
     padding: 0 18px;
     max-height: 0;
-    width: fit-content;
-    transition: max-height 0.8s ease-out;
+    transition: max-height 0.5s ease-out;
     background-color: #f1f1f1;
     overflow-x: hidden;
 }
@@ -95,4 +91,132 @@ hr.line {
     height: 1px;
     border: none;
     background-image: linear-gradient(to right, rgba(238,134,0,1), rgba(238, 135, 0, 0.281));
+}
+
+
+.playstyle-container{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    
+}
+.playstyle-item0{
+    grid-column: 1/4;
+    text-align: center;
+    background-color: lightblue;
+}
+
+.playstyle-item1{
+    grid-column: 1/2;
+}
+
+.playstyle-item2{
+    grid-column: 2/3;
+}
+
+.playstyle-item3{
+    grid-column: 3/4;
+}
+
+
+.race-container{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+
+.race-item0{
+    grid-column: 1/4;
+    text-align: center;
+    background-color: lightblue;
+}
+
+.race-item1{
+    grid-column: 1/2;
+}
+
+.race-item2{
+    grid-column: 2/3;
+}
+
+.race-item3{
+    grid-column: 3/4;
+}
+
+.race-item4{
+    grid-column: 1/2;
+}
+
+.race-item5{
+    grid-column: 2/3;
+}
+
+.race-item6{
+    grid-column: 3/4;
+}
+
+.race-item7{
+    grid-column: 1/2;
+}
+
+.race-item8{
+    grid-column: 2/3;
+}
+
+.race-item9{
+    grid-column: 3/4;
+}
+
+
+.class-container{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+
+.class-item0{
+    grid-column: 1/4;
+    text-align: center;
+    background-color: lightblue;
+}
+
+.class-item1{
+    grid-column: 1/2;
+}
+
+.class-item2{
+    grid-column: 2/3;
+}
+
+.class-item3{
+    grid-column: 3/4;
+}
+
+.class-item4{
+    grid-column: 1/2;
+}
+
+.class-item5{
+    grid-column: 2/3;
+}
+
+.class-item6{
+    grid-column: 3/4;
+}
+
+.class-item7{
+    grid-column: 1/2;
+}
+
+.class-item8{
+    grid-column: 2/3;
+}
+
+.class-item9{
+    grid-column: 3/4;
+}
+
+.class-item10{
+    grid-column: ;
+}
+
+.class-item11{
+    grid-column: ;
 }
