reactive css update

--- a/final_project/style.css
+++ b/final_project/style.css
@@ -93,130 +93,113 @@ hr.line {
     background-image: linear-gradient(to right, rgba(238,134,0,1), rgba(238, 135, 0, 0.281));
 }
 
-
+/*----------PLAYSTYLE STYLE---------------*/
 .playstyle-container{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 16.66% 16.66% 16.66% 16.66% 16.66% 16.66%;
     
 }
 .playstyle-item0{
-    grid-column: 1/4;
+    grid-column: 1/8;
     text-align: center;
     background-color: lightblue;
 }
 
 .playstyle-item1{
-    grid-column: 1/2;
+    grid-column: 1/3;
 }
 
 .playstyle-item2{
-    grid-column: 2/3;
+    grid-column: 3/5;
 }
 
 .playstyle-item3{
-    grid-column: 3/4;
+    grid-column: 5/8;
 }
 
-
+/*----------RACE STYLE---------------*/
 .race-container{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 16.66% 16.66% 16.66% 16.66% 16.66% 16.66%;
 }
 
 .race-item0{
-    grid-column: 1/4;
+    grid-column: 1/8;
     text-align: center;
     background-color: lightblue;
 }
 
-.race-item1{
-    grid-column: 1/2;
+.race-item1, .race-item4, .race-item7{
+    grid-column: 1/3;
 }
 
-.race-item2{
-    grid-column: 2/3;
+.race-item2, .race-item5, .race-item8{
+    grid-column: 3/5;
 }
 
-.race-item3{
-    grid-column: 3/4;
+.race-item3, .race-item6, .race-item9{
+    grid-column: 5/8;
 }
 
-.race-item4{
-    grid-column: 1/2;
-}
-
-.race-item5{
-    grid-column: 2/3;
-}
-
-.race-item6{
-    grid-column: 3/4;
-}
-
-.race-item7{
-    grid-column: 1/2;
-}
-
-.race-item8{
-    grid-column: 2/3;
-}
-
-.race-item9{
-    grid-column: 3/4;
-}
-
-
+/*----------CLASS STYLE---------------*/
 .class-container{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 16.66% 16.66% 16.66% 16.66% 16.66% 16.66%;
 }
 
 .class-item0{
-    grid-column: 1/4;
+    grid-column: 1/8;
     text-align: center;
     background-color: lightblue;
 }
 
-.class-item1{
-    grid-column: 1/2;
+.class-item1, .class-item4, .class-item7, .class-item10{
+    grid-column: 1/3;
 }
 
-.class-item2{
-    grid-column: 2/3;
+.class-item2, .class-item5, .class-item8, .class-item11{
+    grid-column: 3/5;
 }
 
-.class-item3{
-    grid-column: 3/4;
+.class-item3, .class-item6, .class-item9{
+    grid-column: 5/8;
 }
 
-.class-item4{
-    grid-column: 1/2;
-}
+@media (max-width: 700px) {
 
-.class-item5{
-    grid-column: 2/3;
-}
+    .playstyle-container{
+        grid-template-columns: 50% 50%;
+    }
+    .playstyle-item1, .playstyle-item3 {
+        grid-column: 1/2;
+        
+    }
+    .playstyle-item2 {
+        grid-column: 2/3;
+        
+    }
 
-.class-item6{
-    grid-column: 3/4;
-}
+    .race-container{
+        grid-template-columns: 50% 50%;
+    }
+    .race-item1, .race-item3, .race-item5, .race-item7, .race-item9 {
+        grid-column: 1/2;
+        
+    }
+    .race-item2, .race-item4, .race-item6, .race-item8{
+        grid-column: 2/3;
+        
+    }
 
-.class-item7{
-    grid-column: 1/2;
-}
-
-.class-item8{
-    grid-column: 2/3;
-}
-
-.class-item9{
-    grid-column: 3/4;
-}
-
-.class-item10{
-    grid-column: ;
-}
-
-.class-item11{
-    grid-column: ;
-}
+    .class-container{
+        grid-template-columns: 50% 50%;
+    }
+    .class-item1, .class-item3, .class-item5, .class-item7, .class-item9, .class-item11 {
+        grid-column: 1/2;
+        
+    }
+    .class-item2, .class-item4, .class-item6, .class-item8, .class-item10{
+        grid-column: 2/3;
+        
+    }
+  }
