--- a/final_project/style.css
+++ b/final_project/style.css
@@ -165,7 +165,7 @@ hr.line {
     grid-column: 5/8;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 850px) {
 
     .playstyle-container{
         grid-template-columns: 50% 50%;
@@ -203,3 +203,34 @@ hr.line {
         
     }
   }
+
+  @media (max-width: 625px) {
+
+    .playstyle-container{
+        grid-template-columns: 100%;
+    }
+    .playstyle-item1, .playstyle-item2, .playstyle-item3 {
+        grid-column: 1/3;
+        
+    }
+
+    .race-container{
+        grid-template-columns: 100%;
+    }
+    .race-item1, .race-item3, .race-item5,
+    .race-item7, .race-item9, .race-item2, 
+    .race-item4, .race-item6, .race-item8 {
+        grid-column: 1/3;
+        
+    }
+    
+    .class-container{
+        grid-template-columns: 100%;
+    }
+    
+    .class-item1, .class-item3, .class-item5,
+    .class-item7, .class-item9, .class-item11,
+    .class-item2, .class-item4, .class-item6,
+    .class-item8, .class-item10{
+        grid-column: 1/3; 
+    }
