--- a/final_project/style.css
+++ b/final_project/style.css
@@ -76,7 +76,7 @@ img{
 }
 
 /*the select button under each class and race*/
-.select {
+.selectRace, .selectClass, .createCharacter {
     background-color: rgb(0, 185, 0);
     color: white;
     padding: 10px 20px;
